--- a/06_projects/1_1_Color_Change/index.html
+++ b/06_projects/1_1_Color_Change/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/3VXjjoqLwHWB0o4wFRfQlFjxwdje5iTnsbeCaWF7fVWLU5DsxxYUuCn-qM4q4atwIw" type="image/x-icon">
     <title>Color Changer</title>
   </head>
   <body style="background-color: black">
@@ -34,6 +35,6 @@
       <span class="button" id="purple"></span>
       <span class="button" id="white"></span>
     </div>
-    <script src="script.js"></script>
   </body>
+  <script src="script.js"></script>
 </html>
