--- a/06_projects/2_BMI_Calc/index.html
+++ b/06_projects/2_BMI_Calc/index.html
@@ -26,11 +26,11 @@
       <form>
         <div>
           <label for="height">Height in cm : </label>
-          <input type="text" id="height" />
+          <input type="number" id="height" />
         </div>
         <div>
-          <label for="weight">Weight in cm : </label>
-          <input type="text" id="weight" />
+          <label for="weight">Weight in kg : </label>
+          <input type="number" id="weight" />
         </div>
         <button style="padding-left: 7px; padding-right: 7px">Calculate</button>   
         <div id="result"></div>
