--- a/06_projects/2_BMI_Calc/index.html
+++ b/06_projects/2_BMI_Calc/index.html
@@ -12,7 +12,7 @@
     />
   </head>
 
-  <body>
+  <body style="background-color: gray">
     <div class="navbar">
       <div class="logo">
         <img
@@ -21,6 +21,11 @@
         />
       </div>
       <p class="head">BMI Calculator</p>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img
+        id="day"
+        src="https://blog.prepscholar.com/hs-fs/hubfs/Feature_yinyang-cc0.png?width=302&name=Feature_yinyang-cc0.png"
+      />
     </div>
     <div class="container">
       <form>
@@ -32,7 +37,7 @@
           <label for="weight">Weight in kg : </label>
           <input type="number" id="weight" />
         </div>
-        <button style="padding-left: 7px; padding-right: 7px">Calculate</button>   
+        <button style="padding-left: 7px; padding-right: 7px">Calculate</button>
         <div id="result"></div>
       </form>
     </div>
